# wizardrs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
adrian-kennard/: LICENCE.txt
wizardrs-client/: Cargo.toml
wizardrs-client/src/: main.rs
wizardrs-client/src/client/: handle_server_event.rs  mod.rs
wizardrs-client/src/config/: mod.rs
wizardrs-client/src/error/: mod.rs
wizardrs-client/src/gui/: handle_message.rs  handle_state_update.rs  mod.rs
wizardrs-client/src/gui/app_page/: host_page.rs  join_page.rs  mod.rs  settings_page.rs
wizardrs-client/src/gui/app_page/join_page/: game_page.rs
wizardrs-client/src/gui/app_page/join_page/game_page/: bidding_page.rs  lobby_page.rs  mod.rs  playing_page.rs
wizardrs-client/src/image_cache/: mod.rs
wizardrs-client/src/interaction/: gui_message.rs  message.rs  mod.rs  state_update.rs
wizardrs-client/src/state/: game_phase.rs  mod.rs  player.rs
wizardrs-core/: Cargo.toml
wizardrs-core/src/: lib.rs  tests.rs
wizardrs-core/src/card/: color.rs  mod.rs  value.rs
wizardrs-core/src/client_event/: mod.rs
wizardrs-core/src/error/: mod.rs
wizardrs-core/src/game_phase/: mod.rs
wizardrs-core/src/scoreboard/: mod.rs  round_entry.rs
wizardrs-core/src/server_event/: mod.rs
wizardrs-core/src/trump_suit/: mod.rs
wizardrs-core/src/utils/: mod.rs
wizardrs-server/: Cargo.toml
wizardrs-server/src/: lib.rs
wizardrs-server/src/client/: handle_broadcast.rs  handle_client_event.rs  mod.rs
wizardrs-server/src/error/: mod.rs
wizardrs-server/src/server/: builder.rs  mod.rs
