[package]
name = "wizardrs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
wizardrs-core = { path = "../wizardrs-core" }
wizardrs-server = { path = "../wizardrs-server" }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
futures = "0.3"
derive_more = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
egui = { version = "0.30", features = ["serde"] }
eframe = "0.30"
strum = { version = "0.26", features = ["derive"] }
arboard = "3.4"
egui_extras = { version = "0.30", features = ["all_loaders"] }
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"
reqwest = "0.12"
image = { version = "0.25.5", features = ["webp", "png", "jpeg", "gif"] }