[package]
name = "wizardrs-client"
description = "Frontend for the wizardrs project"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
wizardrs-core.workspace = true
wizardrs-server.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
futures.workspace = true
derive_more.workspace = true
thiserror.workspace = true
uuid.workspace = true
egui.workspace = true
eframe.workspace = true
strum.workspace = true
arboard.workspace = true
egui_extras.workspace = true
serde.workspace = true
directories.workspace = true
reqwest.workspace = true
image.workspace = true
rfd.workspace = true
log.workspace = true
chrono.workspace = true
tracing-appender.workspace = true
get_if_addrs.workspace = true
self_update.workspace = true
semver.workspace = true
openssl.workspace = true