[package]
name = "wizardrs-core"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
derive_more.workspace = true
uuid.workspace = true
strum.workspace = true
tracing.workspace = true

[lints.clippy]
type_complexity = "allow"