[package]
name = "wizardrs-server"
version = "0.1.1"
edition = "2021"

[dependencies]
wizardrs-core = { path = "../wizardrs-core" }

tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = "0.26"
derive_more = "2.0"
thiserror = "2.0"
futures = "0.3"
serde_json = "1.0"
uuid = { version = "1.12", features = ["v4"] }
ngrok = "0.13"
tracing = "0.1"
indexmap = "2.7"
url = "2.5"
rand = "0.9"

[lints.clippy]
type_complexity = "allow"