[package]
name = "wizardrs-server"
description = "Backend for the wizardrs project"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
wizardrs-core.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
derive_more.workspace = true
thiserror.workspace = true
futures.workspace = true
serde_json.workspace = true
uuid.workspace = true
ngrok.workspace = true
tracing.workspace = true
indexmap.workspace = true
url.workspace = true
rand.workspace = true